# ssb

./: Cargo.toml  LICENSE  README.md  pre_commit.sh
.github/workflows/: audit.yaml  clippy.yaml  coverage.yaml  rust.yaml  rust.yml  rustfmt.yaml
examples/: .ssb-cli.rs.swp  iot-solar-wip.rs  ssb-cli.rs
src/: lib.rs
src/api/: error.rs  helper.rs  mod.rs
src/api/dto/: blobs.rs  content.rs  ebt.rs  error.rs  history_stream.rs  latest.rs  mod.rs  stream.rs  tangles.rs  whoami.rs
src/crypto/: error.rs  mod.rs  sodium.rs
src/db/: error.rs  feeds.rs  mod.rs
src/discovery/: error.rs  lan.rs  mod.rs  network.rs  pubs.rs
src/feed/: base.rs  encoding.rs  error.rs  feed.rs  message.rs  mod.rs  privatebox.rs
src/keystore/: error.rs  gosbot.rs  identity.rs  mod.rs  patchwork.rs  util.rs
src/patchwork/: api.rs  config.rs  error.rs  messagetypes.rs  mod.rs  msgs.rs  pubs.rs
src/rpc/: client.rs  error.rs  mod.rs  rpc.rs  stream.rs
src/util/: buffer.rs  error.rs  mod.rs
