[package]
name = "kuska-ssb"
version = "0.2.0"
authors = ["Dhole <dhole@riseup.net>", "Adria Massanet <adria@codecontext.io>"]
edition = "2018"

[lib]
name = "kuska_ssb"

[dependencies]
kuska-handshake = { git =  "https://github.com/Kuska-ssb/handshake", branch = "master" , features=["sync","async_std"] }
sodiumoxide = { git = "https://github.com/Dhole/sodiumoxidez", branch = "extra" }
base64 = "0.11.0"
hex = "0.4.0"
async-std = { version = "1.5.0", features=["unstable","attributes"] }
crossbeam = "0.7.3"
log = "0.4.8"
env_logger = "0.7.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1.0.48", features=["preserve_order","arbitrary_precision"] }
dirs = "2.0"
futures = "0.3.4"
lazy_static = "1.4.0"
rand = "0.7.3"
get_if_addrs = "0.5.3"
regex = "1.3.7"
once_cell = "1.3.1"
async-stream = "0.2.1"
thiserror = "1.0.20"

[[example]]
name = "ssb-cli"

[dev-dependencies]
structopt = "0.3.9"
regex = "1.3.4"
